Fixed clipping issue on side bar

--- a/public/ui-assets/style/container.scss
+++ b/public/ui-assets/style/container.scss
@@ -21,7 +21,7 @@ app-wrapper {
   -webkit-align-content: stretch;
 
   .layout {
-    //height:100%;
+    min-height: 764px;
     display:flex;
     display: -webkit-flex;
     align-content: stretch;
